--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
             color: #ddd;
         }
 
-        .question-box:hover {
-            background-color: #f1e6f1;
-        }
-
         /* Styling for the logo */
         .logo {
             display: block;
@@ -50,12 +46,6 @@
             margin-top: 10px; /* Space from the top */
             margin-left: 10px; /* Space from the left */
         }
-    </style>
-</head>
-
-<body>
-    <!-- Logo without a link -->
-    <img src="LOGO.png" alt="Logo" class="logo">
 
         /* Forms and Other Styles */
         .form-container {
@@ -182,6 +172,9 @@
 </head>
 
 <body>
+    <!-- Logo without a link -->
+    <img src="LOGO.png" alt="Logo" class="logo">
+
     <!-- Navigation Menu -->
     <nav>
         <a href="#hero">Home</a>
@@ -202,168 +195,47 @@
         <div class="centered-red" style="color: red; font-size: 2em;">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 19 EUROS PER SESSION</div>
     </section>
 
-   <!-- Contact Form Section -->
-<section class="form-container" style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-    <form action="https://formspree.io/f/xjkkbrlj" method="POST">
-        <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
-        <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
+    <!-- Contact Form Section -->
+    <section class="form-container" style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+        <form action="https://formspree.io/f/xjkkbrlj" method="POST">
+            <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
+            <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
 
-        <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+            <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
+            <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-        <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+            <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-        <label for="country" style="display: block; margin-bottom: 12px; font-weight: bold;">Country</label>
-        <select id="country" name="country" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
-            <option value="" disabled selected>Select Your Country</option>
-            <option value="Austria">Austria</option>
-            <option value="Belgium">Belgium</option>
-            <option value="France">France</option>
-            <option value="Germany">Germany</option>
-            <option value="Italy">Italy</option>
-            <option value="Netherlands">Netherlands</option>
-            <option value="Norway">Norway</option>
-            <option value="Spain">Spain</option>
-            <option value="Sweden">Sweden</option>
-            <option value="Switzerland">Switzerland</option>
-            <option value="United Kingdom">United Kingdom</option>
-            <option value="United States">United States</option>
-            <option value="Saudi Arabia">Saudi Arabia (KSA)</option>
-            <option value="United Arab Emirates">United Arab Emirates (UAE)</option>
-            <option value="Dubai">Dubai</option>
-        </select>
+            <label for="country" style="display: block; margin-bottom: 12px; font-weight: bold;">Country</label>
+            <select id="country" name="country" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+                <option value="" disabled selected>Select Your Country</option>
+                <option value="Austria">Austria</option>
+                <option value="Belgium">Belgium</option>
+                <option value="France">France</option>
+                <option value="Germany">Germany</option>
+                <option value="Italy">Italy</option>
+                <option value="Netherlands">Netherlands</option>
+                <option value="Norway">Norway</option>
+                <option value="Spain">Spain</option>
+                <option value="Sweden">Sweden</option>
+                <option value="Switzerland">Switzerland</option>
+                <option value="United Kingdom">United Kingdom</option>
+                <option value="United States">United States</option>
+                <option value="Saudi Arabia">Saudi Arabia (KSA)</option>
+                <option value="United Arab Emirates">United Arab Emirates (UAE)</option>
+                <option value="Dubai">Dubai</option>
+            </select>
 
-        <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
-        <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;"></textarea>
+            <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
+            <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;" rows="5"></textarea>
 
-        <label for="first-lesson-date" style="display: block; margin-bottom: 12px; font-weight: bold;">Choose your FREE First Lesson</label>
-        <input type="date" id="first-lesson-date" name="first-lesson-date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+            <label for="date" style="display: block; margin-bottom: 12px; font-weight: bold;">Preferred Lesson Date</label>
+            <input type="date" id="date" name="date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-        <button type="submit" style="display: block; width: 100%; padding: 14px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Submit</button>
-    </form>
-</section>
-
-<!-- SIGNAL Link for the 6-Month Challenge -->
-<div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
-    🚨 Click Here to Learn About the 6-Month Challenge 🚨
-</div>
-
-
-    <section id="hero">
-        <img src="IMG_2556.jpg" alt="Learn French" style="width: 90%; display: block; margin: 0 auto;">
-        <div style="text-align: center; margin-top: 30px;">
-            <p style="font-size: 1.5em; font-weight: bold; color: black;">With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
-        </div>
+            <button type="submit" style="background-color: #333; color: white; padding: 15px; font-size: 1.2em; width: 100%; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
+        </form>
     </section>
-
-    <style>
-    /* Section Styles */
-    section {
-        margin: 40px auto;
-        padding: 20px;
-        max-width: 800px;
-        border-radius: 10px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        background-color: white;
-    }
-
-    section h2 {
-        font-size: 2em;
-        color: purple;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    section p {
-        font-size: 1.2em;
-        line-height: 1.8;
-        text-align: justify;
-        color: #333;
-    }
-
-    section ul {
-        list-style-type: disc;
-        padding-left: 40px;
-        color: #555;
-    }
-
-    section ul li {
-        margin-bottom: 10px;
-        font-size: 1.1em;
-    }
-
-    .testimonial {
-        background-color: #f9f9f9;
-        padding: 20px;
-        border-left: 5px solid purple;
-        margin: 20px 0;
-        border-radius: 5px;
-    }
-
-    .testimonial blockquote {
-        font-size: 1.2em;
-        font-style: italic;
-        color: #555;
-        margin: 0 0 10px;
-    }
-
-    .testimonial p {
-        text-align: right;
-        font-size: 1em;
-        color: #777;
-        margin: 0;
-    }
-</style>
-
-<section id="student-needs">
-    <h2>Understanding Your Challenges</h2>
-    <p>Learning French (<em>apprendre le français</em>) can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
-    <ul>
-        <li><strong>Pronunciation challenges</strong> (<em>les défis de la prononciation</em>)</li>
-        <li><strong>Verb conjugation and grammar complexity</strong> (<em>la conjugaison des verbes et la complexité de la grammaire</em>)</li>
-        <li><strong>Difficulty finding speaking practice</strong> (<em>la difficulté à pratiquer l'oral</em>)</li>
-        <li><strong>Maintaining motivation and consistency</strong> (<em>le maintien de la motivation et de la régularité</em>)</li>
-        <li><strong>Overwhelming vocabulary and fear of mistakes</strong> (<em>le vocabulaire écrasant et la peur de faire des erreurs</em>)</li>
-    </ul>
-    <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
-</section>
-
-<section id="services">
-    <h2>My Services</h2>
-    <ul>
-        <li>Customized lessons for all levels</li>
-        <li>French for travel, business, and exams</li>
-        <li>Specialized programs for rapid language improvement</li>
-        <li>Flexible scheduling to fit your lifestyle</li>
-    </ul>
-</section>
-
-<section id="testimonials">
-    <h2>What My Students Say</h2>
-    <div class="testimonial">
-        <blockquote>
-            "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!"
-        </blockquote>
-        <p>- Sarah and Selma, Saudi Arabia</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!"
-        </blockquote>
-        <p>- Anonymous, Dubai</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a diplomat from Spain, I needed to pass my French exams quickly. Meriem’s approach was exactly what I needed to achieve my goals!"
-        </blockquote>
-        <p>- Javier, Spain</p>
-    </div>
-</section>
-
-<footer style="background-color: #333; color: #fff; text-align: center; padding: 10px; margin-top: 20px; font-size: 14px;">
-    © 2024 All Rights Reserved.
-</footer>
-
+</body>
 
 </html>
