--- a/teacher-info.html
+++ b/teacher-info.html
@@ -38,29 +38,13 @@
             color: white;
         }
 
-        header {
-    background-color: #ffd700; /* Golden yellow */
-    color: #4b0082; /* Purple text color */
-    text-align: center;
-    padding: 30px 20px;
-    font-size: 2em; /* Larger header text */
-    border-bottom: 3px solid #4b0082; /* Add a border for emphasis */
-}
-
-header h1 {
-    margin: 0;
-    font-size: 2.5em; /* Slightly larger font size for the main title */
-    font-weight: bold;
-}
-
-header .teacher-details {
-    margin-top: 10px; /* Space between title and details */
-    font-size: 1.2em; /* Smaller font size for details */
-    font-style: italic; /* Italicize to differentiate from the title */
-    font-weight: normal; /* Normal weight for better readability */
-    line-height: 1.5; /* Improve readability with line height */
-}
-
+     <header>
+    <h1>Meet Your Teacher: Meriem</h1>
+    <div class="teacher-details">
+        French Educated | 11 Years Teaching Experience | Professionals & Students<br>
+        Flexible, Patient, and FUN!
+    </div>
+</header>
 
         #intro {
             background-color: #d3b2e5; /* Lighter purple */
