--- a/Tariffs.html
+++ b/Tariffs.html
@@ -105,13 +105,13 @@
                 <strong>Bonus:</strong> The 6th month is free if results exceed expectations.
             </li>
             <li>
-                <span>Exam Preparation:</span> One free month of exam preparation for students paying for a 6-month package.
+                <span>Exam Preparation:</span> 19 euros per 90-minute session. One free month of exam preparation for students paying for a 6-month package.
             </li>
             <li>
                 <span>Diplomatic Exams & Immigration/Citizenship Language Exams:</span> 19 euros per 90-minute session.
             </li>
             <li>
-                <span>Corporate Training:</span> Custom French lessons tailored for companies to upskill their staff.
+                <span>Corporate Training:</span> 19 euros per 90-minute session. Custom French lessons tailored for companies to upskill their staff.
             </li>
         </ul>
         <p><strong>Languages Spoken by the Teacher:</strong> French, English, Arabic, and German.</p>
