--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Personalized French Lessons Tailored Just for You</title>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11536983885">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id=GTM-K5TFPFWX';f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-K5TFPFWX');</script>
+<!-- End Google Tag Manager -->
 
-  gtag('config', 'AW-11536983885');
-</script>
-    <style>
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
