--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Personalized French Lessons Tailored Just for You</title>
-    
+    <title>French Lessons</title>
+
     <!-- Google Tag Manager -->
     <script>
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -12,7 +14,10 @@
         })(window,document,'script','dataLayer','GTM-K5TFPFWX');
     </script>
     <!-- End Google Tag Manager -->
+
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure this points to your CSS file -->
 </head>
+
 
         /* General Styles */
         body {
